Fix geolocate icon small size issue

--- a/client/src/components/J40Map.module.scss
+++ b/client/src/components/J40Map.module.scss
@@ -90,3 +90,9 @@
     height: 75vh;
   }
 }
+
+@media (max-width: 479px) {
+  .geolocateBox > :first-child {
+    position: static !important;
+  }
+}
